# wwdcc

./: Makefile  README.md  Wwdcc.cabal
src/: Config.hs  Logging.hs  Main.hs  MaybeConfig.hs  Wwdcc.hs
